--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
   - README.md
 
 # Theme settings
-theme: just-the-docs
+remote_theme: "pmarsceill/just-the-docs@v0.3.3"
 search_enabled: false
 color_scheme: dark
 aux_links:
