--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "Vera"
+description: "Vera is a DNS-based authentication protocol that works without the Internet"
 
 markdown: kramdown
 liquid:
