--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "static-checks": "run-p static-checks:*",
+    "static-checks:lint": "eslint .",
+    "static-checks:prettier": "prettier --list-different .",
+    "fix": "run-p fix:*",
+    "fix:lint": "eslint --fix .",
+    "fix:prettier": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/react": "^4.2.0",
@@ -17,5 +23,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.8"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^8.25.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
