--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@typescript-eslint/parser": "^8.25.0",
     "eslint-plugin-astro": "^1.3.1",
     "npm-run-all": "^4.1.5",
