--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-astro": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
