--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fix:prettier": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.1.0",
     "@astrojs/react": "^4.2.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^19.0.10",
