--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.3.1",
+    "astro-cloudflare-redirects": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
