--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "fix:prettier": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.1.0",
     "@astrojs/react": "^4.2.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "astro": "^5.3.1",
+    "astro-cloudflare-redirects": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.9"
