Add react-intersection-observer dependency and adjust animation duration in VeraidIdentifier.astro
- Included `react-intersection-observer` version 9.16.0 in package.json and package-lock.json.
- Increased animation duration in VeraidIdentifier.astro from 8s to 12s for smoother effect.
- Updated TabContainer styles for better layout and responsiveness.
- Added spacing in kliento index.astro for improved component structure.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "astro-cloudflare-redirects": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^4.0.9"
   },
