--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "astro-cloudflare-redirects": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/parser": "^8.25.0",
     "eslint-plugin-astro": "^1.3.1",
     "npm-run-all": "^4.1.5",
