Reuse the copy button component in all <pre> tags in markdown pages

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.1",
     "@astrojs/react": "^4.2.1",
+    "@mdx-js/react": "^3.1.0",
     "@tailwindcss/vite": "^4.0.9",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
